# srupy

./: .gitignore  LICENSE.md  README.md  pyproject.toml
srupy/: __init__.py  app.py  iterator.py  models.py  response.py  sruexceptions.py  util.py
tests/: test_srupy.py
