[tool.poetry]
name = "srupy"
version = "0.0.42"
description = "A Python client for fetching data from SRU endpoints"
authors = ["Andreas Lüschow"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
flake8-print = "^3.1.4"
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
